# cpp_vscode_container

./: CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
new_project/: hello.cpp  hello.hpp  main.cpp
tests/unit_tests/: main_test.cpp
